change the italicized text to a RED ALERT!

--- a/src/app/user-directory/user-directory.template.html
+++ b/src/app/user-directory/user-directory.template.html
@@ -40,9 +40,11 @@
   <div [ngSwitch]="loadState">
     <div *ngSwitchCase='"loading"'><sam-spinner></sam-spinner></div>
     <div *ngSwitchCase="'success'">
-      <parent-orgs [orgLevels]="orgLevels" *ngIf="orgLevels"></parent-orgs>
-      <p *ngIf="!orgLevels"><i>Organization information unavailable</i></p>
+      <parent-orgs [orgLevels]="orgLevels" *ngIf="orgLevels.length"></parent-orgs>
+      <samAlert *ngIf="!orgLevels.length" [type]="'error'" [title]="'Organization details unavailable'"></samAlert>
     </div>
-    <p *ngSwitchCase='"error"' ><i>Organization information unavailable</i></p>
+    <p *ngSwitchCase='"error"' >
+      <samAlert [type]="'error'" [title]="'Organization details unavailable'"></samAlert>
+    </p>
   </div>
 </div>
