change the label for the dummy data to match the org specified by the input text for ID

--- a/src/app/user-directory/user-directory.template.html
+++ b/src/app/user-directory/user-directory.template.html
@@ -31,7 +31,7 @@
     </h1>
   </div>
   <div class="user-details-row">Phone <a href="tel:+15555551234">(123) 456-7890</a></div>
-  <div class="user-details-row">Organization: <a [routerLink]="['/organization', orgId]">General Services Administration (GSA)</a>&nbsp;
+  <div class="user-details-row">Organization: <a [routerLink]="['/organization', orgId]">Usa Engineer District Sacramnto</a>&nbsp;
     <button class="usa-button-transparent org-dropdown-button" (click)="onToggleHierarchyClick()" [disabled]="isToggleButtonDisabled()">
       <span class="sr-only">show hierarchy</span>
       <i class="fa" [ngClass]="toggleButtonClass()"></i>
