--- a/src/styles/components/_alert.scss
+++ b/src/styles/components/_alert.scss
@@ -8,6 +8,10 @@
   position: relative;
 }
 
+.usa-alert-warning {
+  background-position-y: 1.2rem;
+}
+
 .usa-alert-heading {
   margin-top: 0em;
   margin-bottom: 0em;
