--- a/src/app/authentication/profile/profile.component.html
+++ b/src/app/authentication/profile/profile.component.html
@@ -11,6 +11,9 @@
       <li>
         <a [routerLink]="['access']" [routerLinkActive]="['usa-current']">My Access</a>
       </li>
+      <li>
+        <a [routerLink]="['migrations']" [routerLinkActive]="['usa-current']">Migrations</a>
+      </li>
     </ul>
   </aside>
   <section class="usa-width-three-fourths usa-profile" [ngClass]="[activeRouteClass]">
