--- a/src/app/authentication/profile/migrations/migrations.component.html
+++ b/src/app/authentication/profile/migrations/migrations.component.html
@@ -1,118 +1,107 @@
+<div class="usa-alerts">
+  <samAlert [type]="states.alert.type"
+            [title]="states.alert.message"
+            [target]="form"
+            [(hidden)]="!states.alert.show"
+            showClose="true"
+            placement='bottom center'></samAlert>
+  <samAlert [target]="form" [offset]="{ top: -100, left: 0 }" type="info" placement="top" title="Migrate Your Roles">
+    If you have a user account at any of the <a [routerLink]="migrations" fragment="legacy-sites">web sites</a> that are moving to the new SAM.gov,
+    you may migrate your roles and keep your same permissions. <a [routerLink]="migrations">Begin Now</a>
+  </samAlert>
+</div>
+
 <h2>Migrations</h2>
 <div>Select one of our legacy web sites. Then enter your user name and password from that site to move your roles to the new SAM.gov</div>
-<div class="usa-content">
-  <form [formGroup]="migrationForm" (ngSubmit)="migrate()">
+
+<div class="usa-content" #form>
+  <form *ngIf="migrationForm" [formGroup]="migrationForm" (ngSubmit)="migrate()">
     <div class="usa-grid">
       <div class="usa-width-one-half">
         <samSelect label="Web Site"
                    name="system"
-                   [control]="migrationForm.controls.system"
+                   [(model)]="store.system"
                    [options]="store.systems"
                    [required]="true"
                    [errorMessage]="errors('system')"></samSelect>
       </div>
       <div class="usa-width-one-half">
-        <labelWrapper label="Email / User Id" required="true" [errorMessage]="errors('username')">
+        <labelWrapper label="Email / User ID" required="true" [errorMessage]="errors('username')">
           <input type="text" autocomplete="off" formControlName="username" readonly="readonly" onfocus="this.removeAttribute('readonly');" />
         </labelWrapper>
         <labelWrapper label="Password" required="true" [errorMessage]="errors('password')">
           <input type="password" autocomplete="off" formControlName="password" readonly="readonly" onfocus="this.removeAttribute('readonly');" />
         </labelWrapper>
         <div class="button-controls">
-          <button type="submit"
-                  class="usa-primary-button"
-                  [ngClass]="{ 'usa-button-disabled': migrationForm.invalid }"
-                  [disabled]="migrationForm.invalid">Migrate</button>
+          <button type="submit" class="usa-primary-button">Migrate</button>
         </div>
       </div>
     </div>
   </form>
+  <div>
+    <h3>Migration History</h3>
+    <div>You have not migrated any legacy website accounts yet.</div>
 
-  <h3>Migration History</h3>
-  <div>You have not migrated any legacy website accounts yet.</div>
+    <table class="usa-table-borderless usa-migration-history">
+      <thead>
+        <tr>
+          <th scope="col" class="text-right">Role</th>
+          <th scope="col">&nbsp;</th>
+          <th scope="col" class="text-left">Organization</th>
+          <th scope="col">&nbsp;</th>
+        </tr>
+      </thead>
+      <tbody *ngFor="let account of store.migrations; let $index = index;">
+        <tr class="group">
+          <td class="text-right">
+            <h1 [innerText]="account.system">CFDA.gov</h1>
+            <div class="key">
+              <span class="fa fa-user"></span>
+              <span [innerText]="account.name">Jane Smith</span>
+            </div>
+          </td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>
+            <div class="key">Migrated <span [innerText]="account.migratedAt">12/10/2016</span></div>
+          </td>
+        </tr>
+        <tr>
+          <td class="text-center" colspan="2">
+            <dl>
+              <dd *ngFor="let role of account.roles;" [innerText]="role.role"></dd>
+            </dl>
+          </td>
+          <td class="text-center">
+            <dl>
+              <dd *ngFor="let role of account.roles;" [innerText]="role.department"></dd>
+            </dl>
+          </td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
 
-  <table class="usa-table-borderless usa-migration-history">
-    <thead>
-      <tr>
-        <th scope="col" class="text-right">Role</th>
-        <th scope="col">&nbsp;</th>
-        <th scope="col" class="text-left">Organization</th>
-        <th scope="col">&nbsp;</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let account of store.migrations; let $index = index;" class="group">
-        <td class="text-right">
-          <h1 [innerText]="store.migrations[$index].system">CFDA.gov</h1>
-          <div class="key">
-            <span class="fa fa-user"></span>
-            <span [innerText]="store.migrations[$index].name">Jane Smith</span>
-          </div>
-        </td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>
-          <div class="key">Migrated <span [innerText]="store.migrations[$index].migratedAt">12/10/2016</span></div>
-        </td>
-      </tr>
-      <tr>
-        <td class="text-center" colspan="2">
-          <dl>
-            <dd *ngFor="let role of store.migrations[$index].roles; let $subIndex = index;" [innerText]="store.migrations[$index].roles[$subIndex].role"></dd>
-          </dl>
-        </td>
-        <td>
-          <dl>
-            <dd *ngFor="let role of store.migrations[$index].roles; let $subIndex = index;" [innerText]="store.migrations[$index].roles[$subIndex].department"></dd>
-          </dl>
-        </td>
-        <td></td>
-      </tr>
-    </tbody>
-  </table>
+    <h3 id="legacy-sites">Legacy Websites</h3>
+    <div>The following web sites are being moved to the new SAM.gov. If you currently have a user account in one of these systems you will be able to move it here.</div>
 
-  <h3 id="legacy-sites">Legacy Websites</h3>
-  <div>The following web sites are being moved to the new SAM.gov. If you currently have a user account in one of these systems you will be able to move it here.</div>
-
-  <table class="usa-table-borderless">
-    <thead>
-      <tr>
-        <th scope="col">Website</th>
-        <th scope="col">Migration Status</th>
-        <th scope="col">System Status</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><a href="https://www.cfda.gov" target="_blank">CFDA.gov</a></td>
-        <td>Available</td>
-        <td>Shutoff Data TBD</td>
-      </tr>
-      <tr>
-        <td><a href="https://www.fbo.gov" target="_blank">FBO.gov</a></td>
-        <td>Available</td>
-        <td>Shutoff Data TBD</td>
-      </tr>
-      <tr>
-        <td><a href="https://www.sam.gov" target="_blank">SAM.gov</a></td>
-        <td>TBD</td>
-        <td>Shutoff Data TBD</td>
-      </tr>
-      <tr>
-        <td><a href="https//www.fpds.gov" target="_blank">FPDS.gov</a></td>
-        <td>TBD</td>
-        <td>Shutoff Data TBD</td>
-      </tr>
-      <tr>
-        <td><a href="https://www.wdol.gov" target="_blank">WDOL.gov</a></td>
-        <td>Accounts Not Required</td>
-        <td>Shutoff Data TBD</td>
-      </tr>
-    </tbody>
-  </table>
+    <table class="usa-table-borderless usa-legacy-systems">
+      <thead>
+        <tr>
+          <th scope="col">Website</th>
+          <th scope="col">Migration Status</th>
+          <th scope="col">System Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let system of store.legacy; let $index = index;">
+          <td>
+            <a [href]="system.target" [innerText]="system.name" target="_blank"></a>
+          </td>
+          <td [innerText]="system.statuses.migration"></td>
+          <td [innerText]="system.statuses.system"></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
-
-<samAlert type="info" title="Migrate Your Roles">
-  If you have a user account at any of the <a [routerLink]="migrations" fragment="legacy-sites">web sites</a> that are moving to the new SAM.gov,
-  you may migrate your roles and keep your same permissions. <a [routerLink]="migrations">Begin Now</a>
-</samAlert>
