--- a/src/app/authentication/profile/reset/reset.component.html
+++ b/src/app/authentication/profile/reset/reset.component.html
@@ -12,13 +12,12 @@
   </form>
 </div>
 
+<samAlert [type]="states.alert.type"
+          [title]="states.alert.title"
+          [hidden]="!states.alert.show"
+          showClose="true"></samAlert>
+
 <samAlert class="usa-alert-static" type="info" title="Migrate Your Roles">
   If you have a user account at any of the <a [href]="config.alert.sites">websites</a> that are moving to the new SAM.gov,
   you may migrate your roles and keep your same permissions. <a [href]="config.alert.migrate">Begin Now</a>.
 </samAlert>
-
-<samAlert [type]="states.alert.type"
-          [title]="states.alert.title"
-          [description]="states.alert.message"
-          [hidden]="states.alert.show"
-          showClose="true"></samAlert>
