--- a/src/app/authentication/profile/reset/reset.component.html
+++ b/src/app/authentication/profile/reset/reset.component.html
@@ -15,6 +15,8 @@
 <samAlert [type]="states.alert.type"
           [title]="states.alert.title"
           [hidden]="!states.alert.show"
+          [target]="passwordEntry"
+          placement="bottom right"
           showClose="true"></samAlert>
 
 <samAlert class="usa-alert-static" type="info" title="Migrate Your Roles">
