Open link in new tab

--- a/src/app/exclusion/exclusion.page.html
+++ b/src/app/exclusion/exclusion.page.html
@@ -95,7 +95,7 @@
 				<strong>Effect:</strong>
 				<i>If you think you have a potential match with an OFAC listing,
 				please visit the following section of OFAC's website for
-				guidance: <a href="http://www.treasury.gov/resource-center/faqs/Sanctions/Pages/directions.aspx">
+				guidance: <a target="_blank" href="http://www.treasury.gov/resource-center/faqs/Sanctions/Pages/directions.aspx">
 				http://www.treasury.gov/resource-center/faqs/Sanctions/Pages/directions.aspx.</a> For all other prohibitions
 				and restrictions, see the agency note in the Additional Comments 
 				field to ascertain the extent or limit on the sanction, restriction
