--- a/src/app/entity/entity-object-view.page.html
+++ b/src/app/entity/entity-object-view.page.html
@@ -298,10 +298,10 @@
 					<h2 id="reps-certs">Representations and Certifications</h2>
 				</div>
 				<p>Select Download FAR Report to review the Representations and Certifications for <b>Excellent Government Contractor Corpopration</b></p>
-				<p><a href="http://{{repsAndCerts.linkForFARReport}}">Download FAR Report</a></p>
+				<p><a target="_blank" href="{{repsAndCerts.linkForFARReport}}">Download FAR Report</a></p>
 				<div *ngIf="repsAndCerts.linkForDFARSReport">
 					<p>Select Download FAR &amp; DFARS Report to review the Representations and Certifications for <b>Excellent Government Contractor Corpopration</b></p>
-					<p><a href="http://{{repsAndCerts.linkForDFARSReport}}">Download FAR &amp; DFARS Report</a></p>
+					<p><a target="_blank" href="{{repsAndCerts.linkForDFARSReport}}">Download FAR &amp; DFARS Report</a></p>
 				</div>
 		</div>
 		<div class="usa-grid-full">
