--- a/src/app/Help/sections/partners/partners.template.html
+++ b/src/app/Help/sections/partners/partners.template.html
@@ -1,8 +1,8 @@
 <section>
   <h2 class="m_T-2x">External Partners</h2>
   <h3 id="featuredPartners" class="p_L-3x">Featured Partners</h3>
-  <div class="usa-grid m_T-4x m_L-3x" *ngFor="let row of data">
-    <imageLibrary [name]="'external-partners'" [data]="row" [hasLayer]="false"></imageLibrary>
+  <div class="usa-grid m_T-4x m_L-3x">
+    <imageLibrary [name]="'external-partners'" [data]="data" [hasLayer]="false"></imageLibrary>
   </div>
   <h3 id="additionalPartners" class="p_L-3x">Additional Partners</h3>
   <div class="usa-grid-full">
