--- a/src/app/Help/image-library/image-library.template.html
+++ b/src/app/Help/image-library/image-library.template.html
@@ -3,11 +3,11 @@
     <div class="usa-width-one-whole">
       <div class="usa-width-one-third" *ngFor="let item of row; let j = index">
         <div class="usa-width-three-fourths image-library-wrap relative" tabindex="0" (keyup.enter)="selectDetail(item,$event)" [ngClass]="getBorderClass(i, j)">
-          <div *ngIf="hasLayer" [id]="name+'-div-'+i" [ngClass]="getLayerClass(i, j)" class="reference-image-layer-unselect" (click)="selectDetail(item,$event)">
-            <span [id]="name+'-link-'+i" class="image-library-title" (click)="selectDetail(item,$event)">{{item.title}}</span>
+          <div *ngIf="hasLayer" [id]="name+'-'+item.title.split(' ').join('-')+'-div'" [ngClass]="getLayerClass(i, j)" class="reference-image-layer-unselect" (click)="selectDetail(item,$event)">
+            <span [id]="name+'-'+item.title.split(' ').join('-')+'-link'" class="image-library-title" (click)="selectDetail(item,$event)">{{item.title}}</span>
           </div>
           <span class="image-library-toggle" (click)="selectDetail(item,$event)">
-            <i [id]="name+'-icon-'+i" class="fa fa-plus" [ngClass]="getItemClass(item)"></i>
+            <i [id]="name+'-'+item.title.split(' ').join('-')+'-icon'" class="fa fa-plus" [ngClass]="getItemClass(item)"></i>
           </span>
           <div class="image-div" (click)="selectDetail(item,$event)"><img class="image-align-center" [src]="item.img" alt="{{item.title}}"></div>
         </div>
@@ -27,8 +27,8 @@
         <a class="image-library-close" (click)="closeReferenceDetail()">Close</a>
         <div class="usa-width-one-whole m_T-4x">
           <h3 class="p_L-2x" *ngIf="showDetailTitle">{{detailObj.item.title}}</h3>
-          <p class="p_L-5x p_R-2x p_B-1x detail-text" *ngIf="!isReleaseDetail">{{detailObj.item.detail}}</p>
-          <table class="usa-grid-full p_L-5x p_R-2x m_B-3x detail-text" *ngIf="isReleaseDetail" style="table-layout: fixed;">
+          <p class="p_L-5x p_R-2x p_B-1x" [id]="'detail-text-'+i" *ngIf="!isReleaseDetail">{{detailObj.item.detail}}</p>
+          <table class="usa-grid-full p_L-5x p_R-2x m_B-3x" *ngIf="isReleaseDetail" style="table-layout: fixed;">
             <tr >
               <td class="m_R-0 release-note-div vertical-line" valign="top">
                 <h4 class="p_L-1x">What we have achieved:</h4>
