--- a/src/styles/components/authentication/profile/_migrations.scss
+++ b/src/styles/components/authentication/profile/_migrations.scss
@@ -3,6 +3,11 @@
     margin-top: 5rem !important;
   }
 
+  .usa-alert-static {
+    top: -44px;
+    left: 0px;
+  }
+
   .usa-alerts {
     position: absolute;
   }
