--- a/src/styles/components/_image-library.scss
+++ b/src/styles/components/_image-library.scss
@@ -71,7 +71,7 @@
   }
 
   .image-align-center{
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%,-50%);
