Fix to display auto suggestion

--- a/src/styles/components/_search-header.scss
+++ b/src/styles/components/_search-header.scss
@@ -10,8 +10,8 @@
 
   .search-bar-container{
     height: 100%;
-    width: auto;
-    overflow:hidden;
+    width: 60%;
+    display: inline-block;
   }
 
   .logo-img {
