- Added in kba check on details for legacy user accounts that have no security questions added - Adjusted header-links fetch session timing

--- a/src/app/authentication/profile/details/details.component.html
+++ b/src/app/authentication/profile/details/details.component.html
@@ -68,7 +68,7 @@
     <!--==========================-->
     <!--=== Security Questions ===-->
     <!--==========================-->
-    <section class="kba" [ngClass]="{ 'usa-editable': isEdit('kba') }">
+    <section *ngIf="user.kbaAnswerList.length" class="kba" [ngClass]="{ 'usa-editable': isEdit('kba') }">
       <h3>Security Questions<a class="usa-edit" href="javascript:void(0);" (click)="edit('kba')">Edit</a></h3>
 
       <div *ngFor="let kbaAnswer of user.kbaAnswerList; let $index = index;" class="usa-form-group kba">
