--- a/src/styles/pages/_new-to-sam.scss
+++ b/src/styles/pages/_new-to-sam.scss
@@ -3,71 +3,37 @@
     font-size: 14px;
   }
 
-  .square-button-bottom{
-    bottom: 0;
-  }
-
-  .square-button-top{
-    top:0;
-  }
-
-  .square-button-top, .square-button-bottom{
-    border-radius:  20px;
-    background: dodgerblue;
-    width: 100%;
-    color: #ffffff;
-    position: absolute;
-  }
-
-  .square-button-top:before,.square-button-bottom:before{
-    content: "";
-    display: block;
-    padding-top: 43%;
-  }
-
-  .square-button-top:after,.square-button-bottom:after{
-    content: "";
-    display: block;
-    padding-bottom: 43%;
-  }
-
-  .square-button-top:hover,.square-button-bottom:hover, .long-button:hover{
-    cursor: pointer;
-  }
-
-  .long-button{
-    padding-top:10%;
-    border-radius: 20px;
-    background: dodgerblue;
-    color: #ffffff;
-  }
-
-  .square-paragragh-area{
-    width: 100%;
-  }
-
-  .square-paragragh-area:before{
-    content: "";
-    display: block;
-    padding-top: 20%;
-  }
-
-  .square-paragragh-area:after{
-    content: "";
-    display: block;
-    padding-bottom: 18%;
-  }
-
-  .button-row{
-    display: flex;
-  }
-
-  .new-to-sam-back:hover{
+  .new-to-sam-back:hover, .square-button:hover{
     cursor: pointer;
   }
 
   .new-to-sam-question{
     font-weight: bold;
     text-align: left;
+  }
+
+  .table-cell-one-forth{
+    width: 25%;
+  }
+
+  .no-border{
+    border:none;
+  }
+
+  .square-button{
+    background: dodgerblue;
+    border-radius: 20px;
+    color: $color-white;
+  }
+
+  table{
+    border-spacing: 10px;
+    border-collapse: inherit;
+    padding-top: 0;
+    table-layout: fixed;
+  }
+
+  .p_T-0{
+    padding-top: 0;
   }
 }
