--- a/src/app/Reports/sections/report/report.template.html
+++ b/src/app/Reports/sections/report/report.template.html
@@ -1,16 +1,11 @@
 <section class="usa-grid-full">
-<br><br><br>
-
-  <h2 class="m_T-2x">{{name}}</h2>
-
-{{desc}}
-  
-
 <br><br>
+Back to: <a routerLink="/reports" routerLinkActive="Active">Dynamic Reports</a>
+<br>
+  <h2 class="m_T-2x">{{name}}</h2>
 <iframe name="viewport" [src]="url" *ngIf="showReport" class="no-frame" height="800" width="1024"></iframe>
-  
 <br>
     <samAccordion>
       <samAccordionSection [name]="'Appendix'" [headerText]="'Appendix'">{{desc}}</samAccordionSection>
-    </samAccordion>  
+    </samAccordion>
 </section>
