--- a/src/app/organization/organization.page.html
+++ b/src/app/organization/organization.page.html
@@ -1,6 +1,6 @@
 <div class="usa-grid" id="organization-page">
   <div class="usa-width-one-whole">
-    <ng-container *ngIf="errorOrganization">Organization ID: {{organization.orgKey}} NOTE: Complete Federal Hierarchy information is currently unavailable.</ng-container>
+    <ng-container *ngIf="errorOrganization">Organization ID: {{errorOrgId}} NOTE: Complete Federal Hierarchy information is currently unavailable.</ng-container>
     <div class="clearfix">
       <div class="logo-section">
         <!-- Logo -->
